--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -193,13 +193,13 @@ main {
 }
 
 .exp-card-title {
-    animation: title-box var(--animation-duration);
-    overflow: hidden;
+    animation: title-box var(--animation-duration), title-box-overflow 1s linear var(--animation-duration);
 }
 
 @keyframes title-reveal { from {transform: translateY(100%);} to {transform: translateY(0);}}
 @keyframes title-hide { from {opacity: 1;} to {opacity: 0;}}
 @keyframes title-box { from{opacity: 0;} 99.99% {opacity: 0;} to {opacity: 1;}}
+@keyframes title-box-overflow {from {overflow: hidden;} to {overflow: hidden;}}
 
 .exp-card-title>*.hide {
     opacity: 0;
@@ -212,7 +212,24 @@ main {
     text-decoration: none;
     display: block;
     animation: title-reveal 1s var(--animation-timing-function) var(--animation-duration);
+    z-index: 1;
+    /* box-shadow: 10px 10px 10px black; */
 }
+
+/* I feel like I could do the next thing with a box shadow but here we are*/
+.exp-card-title>*::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: -100%;
+    left: -100%;
+    height: 300%;
+    width: 300%;
+    background: radial-gradient(ellipse at 50% 50%, rgba(3, 3, 3, 1) 0%, rgba(0, 0, 0, 0) 67%);
+    z-index: -1;
+    animation: expand-shadow 1.5s ease var(--animation-duration) backwards;
+}
+@keyframes expand-shadow {from {scale: 0; opacity: 0;} 50% {scale: 0; opacity: 0;} to {scale: 1; opacity: 1;}}
 
 .mousetracker {
     position: absolute;
